<resources>
    <string name="app_name">EBridge</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="posts">Posts</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="schedules">Schedules</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="e_bridge_sign_up">E-Bridge Sign up</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_address">Your Address</string>
    <string name="existing_user_login">Existing User Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="textview">TextView</string>
    <string name="role">Role</string>
</resources>