<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".AdminProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:text="Profile Information"
            android:textSize="28dp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pageTitle"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="Your Username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />


        <EditText
            android:id="@+id/register_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_username"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/your_first_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/register_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_fname"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/your_last_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_lname"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />


        <EditText
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/your_address"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/register_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/register_address"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/role"
            android:textSize="20sp" />



    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:id="@+id/nav_view"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu_admin" />
</androidx.drawerlayout.widget.DrawerLayout>